# voiceify-agent

./: .gitignore  Dockerfile  MIGRATION_TO_NEW_API.md  README.md  env.example  pyproject.toml  requirements.txt
src/: __init__.py  agent.py  see-sessions.py
src/agents/: __init__.py  factory.py  registry.py
src/session/: __init__.py  events.py  recording.py
src/tools/: __init__.py  converter.py
src/utils/: __init__.py  config.py  logging.py  telemetry.py
