[project]
name = "voiceify-agent"
version = "1.0.0"
description = "LiveKit voice AI agent for Voiceify platform"
requires-python = ">=3.9"
dependencies = [
    "livekit-agents>=1.2.0",
    "livekit>=0.11.0",
    "livekit-plugins-openai>=0.8.0",
    "livekit-plugins-deepgram>=0.8.0",
    "livekit-plugins-elevenlabs>=0.8.0",
    "livekit-plugins-silero>=0.8.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

